# pg-budget

./: .coveragerc  .gitignore  .pylintrc  pyproject.toml
.github/workflows/: build.yml  ci.yml
dev_tools/: scripts.py
pg_budget/: main.py  utils.py
pg_budget/core/: __init__.py  db.py
pg_budget/core/models/: __init__.py  base_model.py  category.py  expense.py  expenses_plan.py  income.py
pg_budget/core/services/: __init__.py  crud_services.py  expense_service.py  expenses_plan_service.py  income_service.py
pg_budget/gui/: __init__.py  utils.py
pg_budget/gui/styles/: base.qss  light_style.qss
pg_budget/gui/views/: __init__.py  base_view.py  expenses_plan_view.py  expenses_view.py  income_view.py  resume_view.py
pg_budget/gui/widgets/: __init__.py  expense_plan_row.py  expense_plan_table.py  expense_row.py  expenses_plan_row.py  expenses_plan_table.py  expenses_stats.py  expenses_table.py  header_row.py  income_row.py  incomes_stats.py  incomes_table.py  month_year_picker.py  resume_stats.py  stat_item.py  text_edit.py
pg_budget/gui/widgets/base/: __init__.py  base_dialog.py  base_row.py  base_stats.py  base_table.py
pg_budget/gui/windows/: __init__.py  main_window.py
pg_budget/logger_setup/: __init__.py  config.py  formatter.py  logger.py
tests/: conftest.py
tests/e2e/: conftest.py  test_expense.py  test_expenses_plan.py  test_file_db.py  test_income.py  utils.py
tests/unit/: test_utils.py
tests/unit/core/: test_db.py  test_main.py
tests/unit/core/models/: test_expense.py  test_expenses_plan.py  test_income.py
tests/unit/core/services/: test_crud_services.py  test_expense_service.py  test_expenses_plan_service.py  test_income_service.py
tests/unit/logger_setup/: test_formatter.py  test_logger.py
