[tool.poetry]
name = "pg-budget"
version = "1.0.1"
description = ""
authors = ["Gael <prungael@gmail.com>"]
readme = "README.md"

packages = [
    { include = "pg_budget" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
python-dateutil = "^2.9.0.post0"
pyside6 = "^6.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-qt = "^4.5.0"
pytest-mock = "^3.15.0"
pylint = "^3.3.8"
flake8 = "^7.3.0"
pyinstaller = "^6.16.0"
black = "^25.1.0"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pg-budget = "pg_budget.main:main"
lint = "dev_tools.scripts:lint"
format = "dev_tools.scripts:format"
test = "dev_tools.scripts:test"
test-e2e = "dev_tools.scripts:test_e2e"
test-e2e-fast = "dev_tools.scripts:test_e2e_fast"
test-unit = "dev_tools.scripts:test_unit"
test-cov = "dev_tools.scripts:test_cov"

format-dt = "dev_tools.scripts:format_dev_tools"

build = "dev_tools.scripts:build"

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests",
    "unit: unit tests"
]